tests/machine/x/cpp/in_operator_extended.error
line 91: ../../../tests/machine/x/cpp/in_operator_extended.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/in_operator_extended.cpp:91:31: error: ‘struct __struct1’ has no member named ‘begin’
   91 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
      |                               ^~~~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:91:42: error: ‘struct __struct1’ has no member named ‘end’
   91 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
      |                                          ^~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:91:72: error: ‘struct __struct1’ has no member named ‘end’
   91 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
      |                                                                        ^~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:96:31: error: ‘struct __struct1’ has no member named ‘begin’
   96 |               << (std::find(m.begin(), m.end(), std::string("b")) != m.end());
      |                               ^~~~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:96:42: error: ‘struct __struct1’ has no member named ‘end’
   96 |               << (std::find(m.begin(), m.end(), std::string("b")) != m.end());
      |                                          ^~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:96:72: error: ‘struct __struct1’ has no member named ‘end’
   96 |               << (std::find(m.begin(), m.end(), std::string("b")) != m.end());
      |                                                                        ^~~

 90 |     std::cout << std::boolalpha
 91 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
 92 |     std::cout << std::endl;
